gradient div on base.html no longer overlapping

--- a/bucketlist_django/bucketlist/static/bucketlist/css/style.css
+++ b/bucketlist_django/bucketlist/static/bucketlist/css/style.css
@@ -7,9 +7,10 @@ body{
 #gradient
 {
     width: 100%;
-    height: 800px;
+    position: absolute;
+    min-height: 100%;
     padding: 0px;
-    margin: 0px;
+    margin: 0 auto;
 }
 
 .user-button{
